fix tools padding on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -120,7 +120,9 @@ nav{
         padding-top: 20px;
     }
     
-    
+    .tools-row{
+        padding: 20px;
+    }
 
     #contact{
         padding: 7%;
@@ -143,11 +145,14 @@ nav{
         display: none;
     }
     .row-two{
-        padding-top: 20px;
+        padding-top: 0px;
     }
 
     .display-2{
         font-size: 4.5rem;
+    }
+    .tools-row{
+        padding: 0px;
     }
     
 } 
